sakura-ns-dev/components/builder-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-builder

spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - csc301.tokyotech.org
              weight: 1
